[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/player.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/flameA_yellow.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 29.1643

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 3, 1.4, 1.4, 1 ), Color( 1, 1, 1, 1 ), Color( 3, 1.4, 1.4, 1 ), Color( 1, 1, 1, 1 ), Color( 3, 1.4, 1.4, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
texture = ExtResource( 3 )

[node name="FlameMain" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -0.000351365, 56 )
rotation = 4.05312e-06
texture = ExtResource( 4 )
offset = Vector2( 4.76837e-07, 40.5 )

[node name="FlameLeft" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( -30.502, 53.3778 )
rotation = 0.261799
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 4.76837e-07, 40.5 )

[node name="FlameRight" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( 30.5014, 53.5654 )
rotation = -0.261799
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 4.76837e-07, 40.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 2 )
